# caldav-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.audit/: BACKLOG.md  CHARTER.md  DECISIONS.md  JOURNAL.md  ROADMAP.md  STATE.md
.github/workflows/: ci.yml
scripts/: inspector_smoke.sh
src/icloud_caldav_mcp/: __init__.py  __main__.py  auth.py  config.py  errors.py  ical.py  logging.py  models.py  quickadd.py  server.py  service.py
tests/: conftest.py  test_auth.py  test_config.py  test_ical.py  test_integration_caldav.py  test_protocol.py  test_quickadd.py  test_real_icloud.py
